# dbprove

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  OUTPUT-FORMATS.md  README.md  ai-rules.md  authenticate_databricks.sh  benchmark.sh  dump_clickhouse_plan_tree.sh  dump_dbx_plan.mjs  kill_dbprove_containers.sh  log_formatter.h  main.cpp  package-lock.json  test.sh  theorem_type.h  vcpkg.json
docker/datafusion/plan_json/: Cargo.toml
generator/: CMakeLists.txt  date_range.cpp  date_range.h  foreign_key.h  formatter.h  generated_table.cpp  generated_table.h  generator_object.h  generator_state.cpp  generator_state.h  integer_range.h  key.h  set.h  v_string.h  weighted_select.h
generator/evil/sql/: insert_seed10.sql
generator/test/: CMakeLists.txt  date_range.cpp  tpch.cpp
generator/tpch/: tpch.h  tpch_container.cpp  tpch_container.h  tpch_nation.h  tpch_phone.h  tpch_table_gen.cpp  tpch_text.cpp  tpch_text.h  tpch_types.cpp  tpch_types.h
generator/tpch/ddl/: ORDERS.ddl  PART.ddl  REGION.ddl  SUPPLIER.ddl  nation.ddl  partsupp.ddl
sql/: CMakeLists.txt  column_base.h  connection_base.cpp  connection_base.h  connection_factory.h  credential.cpp  credential.h  credential_base.h  credential_file.h  credential_password.h  engine.cpp  engine.h  integer_type_def.h  query.h  result_base.cpp  result_base.h  row_base.h  row_iterator.cpp  row_iterator.h  sql_exceptions.h  sql_type.h
sql/boilerplate/: CMakeLists.txt  connection.cpp  connection.h  result.cpp  result.h  row.cpp
sql/databricks/: CMakeLists.txt  connection.cpp  connection.h  result.cpp  result.h  row.cpp  row.h
sql/duckdb/: CMakeLists.txt  connection.cpp  connection.h  result.cpp  result.h  row.cpp  row.h
sql/explain/: column.h  distribution.h  expression.h  group_by.h  join.h  limit.h  node.cpp  node.h  node_type.h  plan.cpp  plan.h  projection.h  scan.h  scan_empty.h  select.h  selection.h  sort.h  union.h
sql/mariadb/: CMakeLists.txt  README.md
sql/msodbc/: CMakeLists.txt  connection.cpp  connection.h
sql/postgres/: CMakeLists.txt  README.md  connection.cpp  connection.h  result.cpp  row.cpp  row.h
sql/sqlite/: CMakeLists.txt  README.md
sql/test/: CMakeLists.txt  connection.cpp
sql/test/sql/: bushy_plan.sql  explain.sql  union_and_join.sql
sql/utopia/: CMakeLists.txt  connection.cpp  connection.h  result.cpp  result.h  row.h  utopia_data.h
sql/utopia/test/: CMakeLists.txt  connection.cpp  result.cpp
src/common/: CMakeLists.txt  aws_bucket.cpp  docker.cpp  file_utility.cpp  json_utility.cpp  pretty.cpp
src/dbreport/: CMakeLists.txt  main.cpp
src/dbreport/sql/: engine_data.sql  engines.sql  proof.sql
src/generator/: CMakeLists.txt  README.md  date_range.cpp  double_range.h  formatter.h  generator_state.cpp  key.h  set.h  v_string.h  variable_integer.h
src/generator/job/: job.cpp  job.h
src/generator/scale/: scale.h
src/generator/test/: CMakeLists.txt  date_range.cpp  simple_test_generator.cpp  tpch.cpp
src/generator/tpch/: download_shims.cpp  tpch.h  tpch_container.h  tpch_phone.cpp  tpch_phone.h  tpch_table_gen.cpp  tpch_text.cpp  tpch_text.h  tpch_types.h
src/sql/: CMakeLists.txt  READMD.md  README.md  connection_base.cpp  connection_factory.cpp  credential.cpp  engine.cpp  expression.cpp  parsed_table.cpp  query.cpp  result_base.cpp  row_base.cpp  row_iterator.cpp  sql_exception.cpp  sql_type.cpp
src/sql/boilerplate/: CMakeLists.txt  README.md  connection.cpp  connection.h  explain.cpp  result.cpp  result.h  row.cpp  row.h
src/sql/cedardb/: CMakeLists.txt  README.md  connection.cpp  connection.h  explain.cpp
src/sql/clickhouse/: CMakeLists.txt  README.md  ast_parser.cpp  ast_parser.h  block_holder.h  connection.cpp  connection.h  dialect.cpp  dialect.h  explain.cpp  expression_node.cpp  expression_node.h  literals.cpp  literals.h  plan_node.cpp  plan_node.h  plan_tree_dump.cpp  query_tree_parser.cpp  query_tree_parser.h  result.cpp  result.h  row.cpp  row.h
src/sql/databricks/: CMakeLists.txt  README.md  connection.cpp  connection.h  explain.cpp  explain_context.cpp  explain_context.h  result.cpp  result.h  row.cpp  row.h
src/sql/datafusion/: CMakeLists.txt  README.md  connection.cpp  connection.h  explain.cpp  result.cpp  result.h  row.cpp  row.h
src/sql/duckdb/: CMakeLists.txt  connection.cpp  connection.h  explain.cpp  parsers.h  result.cpp  result.h  result_holder.h  row.cpp  row.h
src/sql/explain/: CMakeLists.txt  README.md  column.cpp  cutoff.h  distribution.cpp  distribution.h  explain_nodes.h  glyphs.h  group_by.cpp  group_by.h  join.cpp  join.h  limit.cpp  limit.h  materialise.cpp  materialise.h  node.cpp  plan.cpp  projection.cpp  projection.h  scan.cpp  scan.h  scan_empty.cpp  scan_empty.h  scan_materialised.cpp  scan_materialised.h  select.cpp  select.h  selection.cpp  selection.h  sequence.h  sort.cpp  sort.h  union.cpp  union.h
src/sql/information_schema/: README.md  data_type.sql
src/sql/mariadb/: CMakeLists.txt  connection.cpp  connection.h  result.cpp  result.h  row.cpp  row.h
src/sql/msodbc/: CMakeLists.txt  README.md  bulk_load.cpp  connection.cpp  connection.h  explain.cpp  result.cpp  result.h  row.cpp  row.h
src/sql/mssql/: CMakeLists.txt  README.md  bulk_load.cpp  connection.cpp  connection.h  explain.cpp
src/sql/odbc/: CMakeLists.txt  README.md  connection.cpp  connection.h  result.cpp  result.h  row.cpp  row.h
src/sql/postgres/: CMakeLists.txt  connection.cpp  connection.h  explain.cpp  result.cpp  result.h  row.cpp  row.h
src/theorem/: CMakeLists.txt  data.cpp  init.cpp  init.h  proof.cpp  prove.cpp  prover.cpp  query.cpp  query.h  run_ctx.cpp  run_state.cpp  runner.cpp  runner.h  test_theorem.cpp  type.cpp
src/ux/: CMakeLists.txt  boxes.cpp  boxes.h  colour.cpp  colour.h  glyphs.h  messages.cpp  pre_ample.cpp  pretty.cpp  sort_orders.h  spinner.cpp  tables.cpp  terminal.cpp
theorem/: CMakeLists.txt  run_theorems.cpp  run_theorems.h  runner.cpp  runner.h  types.cpp  types.h
theorem/cli/: prove.cpp  prove.h
theorem/plan/: prove.cpp  prove.h
theorem/se/: prove.h
ux/: Glyph.h  (+5 more)
(+458 files in other folders)
