set(_targetName "dbprove_theorem")
add_library(${_targetName} STATIC)
add_library(dbprove::theorem ALIAS ${_targetName})

target_sources(${_targetName}
        PUBLIC FILE_SET installed TYPE HEADERS BASE_DIRS include
)

target_include_directories(${_targetName} PRIVATE $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/dbprove/theorem>)

target_sources(${_targetName}
        PRIVATE
        plan/prove.cpp
        ee/prove.cpp
        cli/prove.cpp
        runner.cpp
        proof.cpp
        prover.cpp
        query.cpp
        init.cpp
        run_ctx.cpp
        type.cpp
        data.cpp
        test_theorem.cpp
        PRIVATE FILE_SET internal TYPE HEADERS FILES
        runner.h
        query.h
        init.h
        cli/prover.h
        ee/prover.h
        plan/prover.h
)

target_embed_files(${_targetName} SQL_FILES
        query/plan_join_check/anti_customer_orders.sql
        query/plan_join_check/anti_orders_customer.sql
        query/plan_join_check/anti_orders_customer_plus1.sql
        query/plan_join_check/full_orders_customer.sql
        query/plan_join_check/inner_match.sql
        query/plan_join_check/left_customer_orders.sql
        query/plan_join_check/left_orders_customer.sql
        query/plan_join_check/semi_customer_orders.sql
        query/plan_join_check/semi_orders_customer.sql
        query/plan_join_check/semi_orders_customer_plus1.sql
        query/tpch/q01.sql
        query/tpch/q02.sql
        query/tpch/q03.sql
        query/tpch/q04.sql
        query/tpch/q05.sql
        query/tpch/q06.sql
        query/tpch/q07.sql
        query/tpch/q08.sql
        query/tpch/q09.sql
        query/tpch/q10.sql
        query/tpch/q11.sql
        query/tpch/q12.sql
        query/tpch/q13.sql
        query/tpch/q14.sql
        query/tpch/q15.sql
        query/tpch/q16.sql
        query/tpch/q17.sql
        query/tpch/q18.sql
        query/tpch/q19.sql
        query/tpch/q20.sql
        query/tpch/q21.sql
        query/tpch/q22.sql
        query/job/job_1a.sql
        query/job/job_1b.sql
        query/job/job_1c.sql
        query/job/job_1d.sql
        query/job/job_2a.sql
        query/job/job_2b.sql
        query/job/job_2c.sql
        query/job/job_2d.sql
        query/job/job_3a.sql
        query/job/job_3b.sql
        query/job/job_3c.sql
        query/job/job_4a.sql
        query/job/job_4b.sql
        query/job/job_4c.sql
        query/job/job_5a.sql
        query/job/job_5b.sql
        query/job/job_5c.sql
        query/job/job_6a.sql
        query/job/job_6b.sql
        query/job/job_6c.sql
        query/job/job_6d.sql
        query/job/job_6e.sql
        query/job/job_6f.sql
        query/job/job_7a.sql
        query/job/job_7b.sql
        query/job/job_7c.sql
        query/job/job_8a.sql
        query/job/job_8b.sql
        query/job/job_8c.sql
        query/job/job_8d.sql
        query/job/job_9a.sql
        query/job/job_9b.sql
        query/job/job_9c.sql
        query/job/job_9d.sql
        query/job/job_10a.sql
        query/job/job_10b.sql
        query/job/job_10c.sql
        query/job/job_11a.sql
        query/job/job_11b.sql
        query/job/job_11c.sql
        query/job/job_11d.sql
        query/job/job_12a.sql
        query/job/job_12b.sql
        query/job/job_12c.sql
        query/job/job_13a.sql
        query/job/job_13b.sql
        query/job/job_13c.sql
        query/job/job_13d.sql
        query/job/job_14a.sql
        query/job/job_14b.sql
        query/job/job_14c.sql
        query/job/job_15a.sql
        query/job/job_15b.sql
        query/job/job_15c.sql
        query/job/job_15d.sql
        query/job/job_16a.sql
        query/job/job_16b.sql
        query/job/job_16c.sql
        query/job/job_16d.sql
        query/job/job_17a.sql
        query/job/job_17b.sql
        query/job/job_17c.sql
        query/job/job_17d.sql
        query/job/job_17e.sql
        query/job/job_17f.sql
        query/job/job_18a.sql
        query/job/job_18b.sql
        query/job/job_18c.sql
        query/job/job_19a.sql
        query/job/job_19b.sql
        query/job/job_19c.sql
        query/job/job_19d.sql
        query/job/job_20a.sql
        query/job/job_20b.sql
        query/job/job_20c.sql
        query/job/job_21a.sql
        query/job/job_21b.sql
        query/job/job_21c.sql
        query/job/job_22a.sql
        query/job/job_22b.sql
        query/job/job_22c.sql
        query/job/job_22d.sql
        query/job/job_23a.sql
        query/job/job_23b.sql
        query/job/job_23c.sql
        query/job/job_24a.sql
        query/job/job_24b.sql
        query/job/job_25a.sql
        query/job/job_25b.sql
        query/job/job_25c.sql
        query/job/job_26a.sql
        query/job/job_26b.sql
        query/job/job_26c.sql
        query/job/job_27a.sql
        query/job/job_27b.sql
        query/job/job_27c.sql
        query/job/job_28a.sql
        query/job/job_28b.sql
        query/job/job_28c.sql
        query/job/job_29a.sql
        query/job/job_29b.sql
        query/job/job_29c.sql
        query/job/job_30a.sql
        query/job/job_30b.sql
        query/job/job_30c.sql
        query/job/job_31a.sql
        query/job/job_31b.sql
        query/job/job_31c.sql
        query/job/job_32a.sql
        query/job/job_32b.sql
        query/job/job_33a.sql
        query/job/job_33b.sql
        query/job/job_33c.sql
)

find_package(unofficial-vincentlaucsb-csv-parser CONFIG REQUIRED)
find_package(magic_enum CONFIG REQUIRED)

target_link_libraries(${_targetName} PRIVATE
        dbprove::sql
        dbprove::generator
        dbprove::ux
        dbprove::common
        unofficial::vincentlaucsb-csv-parser::csv
        PUBLIC
        magic_enum::magic_enum
)

# TODO: Integrate CSV writer here
